skill file rename.

--- a/memory/2026-02-04.md
+++ b/memory/2026-02-04.md
@@ -21,7 +21,7 @@ Fixed feature parity gaps in the MCP interface by adding two missing parameters 
 - Follows existing pattern: type assertion → assignment to `crawlReq`
 
 ### 4. Updated skill documentation
-- **File**: `docs/skill.md`
+- **File**: `docs/SKILL.md`
 - Added `stateFile` and `verbose` to the MCP scraper_start parameters table
 
 ## Feature Parity Status
@@ -34,4 +34,4 @@ All four interfaces now support the same 35 configuration parameters:
 ## Files Modified
 - `internal/mcp/types.go`
 - `internal/mcp/tools.go`
-- `docs/skill.md`
+- `docs/SKILL.md`
