--- a/memory/2026-02-20.md
+++ b/memory/2026-02-20.md
@@ -34,7 +34,7 @@ Replaced `go-shiori/go-readability` (Mozilla Readability port) with `markusmobiu
 ### Documentation
 - **README.md**: Updated feature descriptions, CLI flag docs, output structure docs
 - **ARCHITECTURE.md**: Updated storage description, config table, dependency table, design decisions
-- **docs/skill.md**: Updated MCP parameter docs, CLI flag table, output format description
+- **docs/SKILL.md**: Updated MCP parameter docs, CLI flag table, output format description
 
 ### Dependencies
 - **go.mod/go.sum**: Added go-trafilatura and transitive deps
